# hermes-gate-upstream-fork

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  GUIDE.md  LICENSE  PLAN.md  README.md  README_ZH.md  docker-compose.windows.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  run.ps1  run.sh  start.sh
docs/: stability-fix-plan.md
hermes_gate/: __init__.py  app.py  network.py  servers.py  session.py
plugins/gate-notify/: __init__.py  plugin.yaml
tests/: test_attach_mouse_scroll.py  test_docs.py  test_kill_session.py  test_notification_content.py  test_refresh_sessions.py  test_run_ps1.py
