[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-gate"
version = "0.1.0"
description = "Hermes Gate — TUI tool for remotely connecting to Hermes tmux sessions on cloud servers"
requires-python = ">=3.11"
dependencies = [
    "textual>=3.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
gate = "hermes_gate.__main__:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
